Fix layout issues

--- a/src/electron/views/screenshot/screenshot-container.scss
+++ b/src/electron/views/screenshot/screenshot-container.scss
@@ -2,6 +2,5 @@
 // Licensed under the MIT License.
 .screenshot-container {
     width: 100%;
-    height: 100%;
     position: relative;
 }
