--- a/src/electron/views/screenshot/screenshot.scss
+++ b/src/electron/views/screenshot/screenshot.scss
@@ -2,7 +2,6 @@
 // Licensed under the MIT License.
 .screenshot-image {
     width: 100%;
-    height: 100%;
     object-fit: contain;
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
 }
